# notion-skill

./: .env.example  .gitignore  pyproject.toml
.omc/state/: agent-replay-74d5b619-994e-42ce-a368-aff76f75c618.jsonl  hud-state.json  hud-stdin-cache.json  last-tool-error.json  ralph-state.json  subagent-tracking.json  ultrawork-state.json
config/: default.yaml  plugin_categories.yaml
notion_manager/: ai_provider.py  cache.py  cli.py  client.py  config.py  execution_tracker.py  plugin_meta.py  plugin_registry.py  plugin_state.py
notion_manager/plugins/: auto_archiver.py  auto_sorter.py  backup.py  base.py  bulk_updater.py  bullet_converter.py  changelog_tracker.py  content_expander.py  content_graph.py  content_scheduler.py  cross_page_qa.py  daily_journal.py  db_health_checker.py  db_stats.py  deadline_alerter.py  digest_generator.py  duplicate_detector.py  empty_detector.py  faq_generator.py  goal_tracker.py  hierarchy_optimizer.py  keyword_analyzer.py  meeting_summarizer.py  meeting_template.py  orphan_detector.py  page_merger.py  page_quality_checker.py  page_recommender.py  project_summarizer.py  property_normalizer.py  reading_notes.py  recurring_task_generator.py  relation_linker.py  release_notes.py  search.py  semantic_search.py  sentiment_analyzer.py  status_reporter.py  summarizer.py  tagger.py  (+7 more)
tests/: test_cache.py  test_cli_plugins.py  test_client.py  test_execution_tracker.py  test_plugin_meta.py  test_plugin_state.py
tests/test_plugins/: test_auto_archiver.py  test_auto_sorter.py  test_backup.py  test_bulk_updater.py  test_bullet_converter.py  (+40 more)
